# resona

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
src/backend/ml/: arxiv_categories.py  llm_client.py  research_query.py  test_client.py  websocket-test.html
src/data/: pyproject.toml
src/data/connectors/arxiv/: main.py
src/data/tests/integration/connectors_tests/: test_arxiv_connector.py
src/data/tests/unit/connectors_tests/: test_arxiv_connector.py
