[project]
name = "resona-monorepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Bellinda MESBAH",email = "58891083+bellindamesbah@users.noreply.github.com"}
]
readme = "README.md"
requires-python= ">=3.10,<4.0"
dependencies = [
    "arxiv (>=2.1.3,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
